--- a/main.kv
+++ b/main.kv
@@ -130,7 +130,7 @@ ScreenManager:
             size_hint_x: .95
             size_hint_y: None
             font_style: "Caption"
-            text: "Инструкция\n1. Авторизируйтесь в приложении\n2. Выберите группу и другие параметры\n3. Загрузите изображения студенческого журнала\n4. Проверьте правильность данных\n5. Загрузите отчет\n\nДокументация\n" if lang.active else "FAQ\n1. Log in to the application\n2. Choose group and other parametres\n3. Load images of student journal\n4. Check input and output data\n5. Load data\n\nDocumentation:\n"
+            text: "Инструкция\n1. Авторизируйтесь в приложении\n2. Выберите группу и другие параметры\n3. Загрузите изображения студенческого журнала\n4. Проверьте правильность данных\n5. Загрузите отчет\n\nДокументация:\n" if lang.active else "FAQ\n1. Log in to the application\n2. Choose group and other parametres\n3. Load images of student journal\n4. Check input and output data\n5. Load data\n\nDocumentation:\n"
             pos_hint: {"center_x": .5, "center_y": .82}
             valign: 'bottom'
             halign: 'center'
@@ -149,7 +149,7 @@ ScreenManager:
             size_hint_x: .95
             size_hint_y: None
             font_style: "Caption"
-            text: "\nПродолжая использование приложения Вы соглашаетесь с тем, что:\n1. Используете приложение в учебных ознакомительных целях\n2. Автор не несет ответственность за загружаемые данные другими пользователями, работоспособность отдельных компонентов или приложения в целом\n3. Все права на приложение принадлежат автору." if lang.active else "By continue using the application, you agree that:\n1. You are using the app for educational purposes\n 2. The author is not responsible for the data uploaded by other users, the performance of individual components or the application as a whole\n3. All rights to the application belong to the author."
+            text: "\nПродолжая использование приложения Вы соглашаетесь с тем, что:\n1. Используете приложение в учебных ознакомительных целях\n2. Автор не несет ответственность за загружаемые данные другими пользователями, работоспособность отдельных компонентов или приложения в целом\n3. Все права на приложение принадлежат автору" if lang.active else "By continue using the application, you agree that:\n1. You are using the app for educational purposes\n 2. The author is not responsible for the data uploaded by other users, the performance of individual components or the application as a whole\n3. All rights to the application belong to the author"
             pos_hint: {"center_x": .5, "center_y": .5}
             valign: 'bottom'
             halign: 'center'
