--- a/main.kv
+++ b/main.kv
@@ -180,7 +180,7 @@ ScreenManager:
             icon_left: "linkedin"
             md_bg_color: 0, 0, 0, 0
             on_press:
-                webbrowser.open('https://www.google.com/')
+                webbrowser.open('https://www.linkedin.com/in/dmitry-moskalev/')
 
         MDChip:
             size_hint_x: .1
@@ -190,7 +190,7 @@ ScreenManager:
             icon_left: "web"
             md_bg_color: 0, 0, 0, 0
             on_press:
-                webbrowser.open('https://www.google.com/')
+                webbrowser.open('https://www.workinds.com/')
 
         MDChip:
             size_hint_x: .1
@@ -200,7 +200,7 @@ ScreenManager:
             icon_left: "github"
             md_bg_color: 0, 0, 0, 0
             on_press:
-                webbrowser.open('https://www.google.com/')
+                webbrowser.open('https://github.com/entersub')
 
         MDFillRoundFlatButton:
             size_hint_x: .5
