--- a/main.kv
+++ b/main.kv
@@ -340,7 +340,7 @@ ScreenManager:
             pos_hint: {'center_x': .5,'center_y': .05}
             md_bg_color: (138.0/255.0,161.0/255.0,107.0/255.0,.5)
             on_press:
-                root.transition.direction = 'right'
+                root.transition.direction = 'left'
                 root.current = 'login'
 
     MDScreen:
@@ -420,7 +420,7 @@ ScreenManager:
                 pos_hint: {'center_x': .5,'center_y': .05}
                 md_bg_color: (138.0/255.0,161.0/255.0,107.0/255.0,.5)
                 on_press:
-                    root.transition.direction = 'right'
+                    root.transition.direction = 'left'
                     root.current = 'login'
 
     MDScreen:
@@ -466,7 +466,7 @@ ScreenManager:
                         pos_hint: {"center_x": .25, "center_y": .5}
                         md_bg_color: (138.0/255.0,161.0/255.0,107.0/255.0,.5)
                         on_press:
-                            root.transition.direction = 'right'
+                            root.transition.direction = 'left'
                             root.current = 'model_login'
 
                     MDFillRoundFlatButton:
@@ -548,7 +548,7 @@ ScreenManager:
                 pos_hint: {'center_x': .5,'center_y': .05}
                 md_bg_color: (138.0/255.0,161.0/255.0,107.0/255.0,.5)
                 on_press:
-                    root.transition.direction = 'right'
+                    root.transition.direction = 'left'
                     root.current = 'subjects'
 
     MDScreen:
