--- a/main.kv
+++ b/main.kv
@@ -149,16 +149,25 @@ ScreenManager:
             size_hint_x: .95
             size_hint_y: None
             font_style: "Caption"
-            text: "Инструкция\n1. Авторизируйтесь в приложении\n2. Выберите группу и другие параметры\n3. Загрузите изображения студенческого журнала\n4. Проверьте правильность данных\n5. Загрузите отчет\n\nДокументация:\n" if lang.active else "FAQ\n1. Log in to the application\n2. Choose group and other parametres\n3. Load images of student journal\n4. Check input and output data\n5. Load data\n\nDocumentation:\n"
-            pos_hint: {"center_x": .5, "center_y": .82}
-            valign: 'bottom'
+            text: "Текущая версия: 1.0" if lang.active else "Current version: 1.0"
+            pos_hint: {"center_x": .5, "center_y": .95}
+            valign: 'top'
+            halign: 'center'
+
+        MDLabel:
+            size_hint_x: .95
+            size_hint_y: None
+            font_style: "Caption"
+            text: "Инструкция\n1. Авторизируйтесь в приложении\n2. Выберите группу и другие параметры\n3. Загрузите изображения студенческого журнала\n4. Проверьте правильность данных\n5. Загрузите отчет\nДокументация:" if lang.active else "FAQ\n1. Log in to the application\n2. Choose group and other parametres\n3. Load images of student journal\n4. Check input and output data\n5. Load data\nDocumentation:"
+            pos_hint: {"center_x": .5, "center_y": .8}
+            valign: 'center'
             halign: 'center'
 
         MDIconButton:
             size_hint_x: .1
             size_hint_y: None
             markup: True
-            pos_hint: {"center_x": .5, "center_y": .68}
+            pos_hint: {"center_x": .5, "center_y": .67}
             icon: "file-pdf-box"
             on_press:
                 webbrowser.open('https://www.google.com/')
