--- a/main.kv
+++ b/main.kv
@@ -170,7 +170,7 @@ ScreenManager:
             pos_hint: {"center_x": .5, "center_y": .67}
             icon: "file-pdf-box"
             on_press:
-                webbrowser.open('https://www.google.com/')
+                webbrowser.open('https://github.com/EnterSub/Project_Data_Analysis#readme')
 
         MDLabel:
             size_hint_x: .95
