--- a/main.kv
+++ b/main.kv
@@ -106,7 +106,7 @@ ScreenManager:
                 halign: 'center'
                 on_active:
                     app.theme_cls.theme_style = "Dark" if self.active else "Light"
-                    app.theme_cls.primary_palette = "Gray" if self.active else "Green"
+                    #app.theme_cls.primary_palette = "Gray" if self.active else "Green"
 
             MDTextButton:
                 id: information
