--- a/main.kv
+++ b/main.kv
@@ -176,7 +176,7 @@ ScreenManager:
             size_hint_x: .95
             size_hint_y: None
             font_style: "Caption"
-            text: "\nПродолжая использование приложения Вы соглашаетесь с тем, что:\n1. Используете приложение в учебных ознакомительных целях\n2. Автор не несет ответственность за загружаемые данные другими пользователями, работоспособность отдельных компонентов или приложения в целом\n3. Все права на приложение принадлежат автору" if lang.active else "By continue using the application, you agree that:\n1. You are using the app for educational purposes\n 2. The author is not responsible for the data uploaded by other users, the performance of individual components or the application as a whole\n3. All rights to the application belong to the author"
+            text: "\nПродолжая использование приложения Вы соглашаетесь с тем, что:\n1. Используете приложение в учебных некоммерческих целях\n2. Автор не несет ответственность за загружаемые данные другими пользователями, работоспособность отдельных компонентов или приложения в целом\n3. Все права на приложение принадлежат автору" if lang.active else "By continue using the application, you agree that:\n1. You are using the app for educational non-commercial purposes\n 2. The author is not responsible for the data uploaded by other users, the performance of individual components or the application as a whole\n3. All rights to the application belong to the author"
             pos_hint: {"center_x": .5, "center_y": .5}
             valign: 'bottom'
             halign: 'center'
