--- a/main.kv
+++ b/main.kv
@@ -158,7 +158,7 @@ ScreenManager:
             size_hint_x: .95
             size_hint_y: None
             font_style: "Caption"
-            text: "Инструкция\n1. Авторизируйтесь в приложении\n2. Выберите группу и другие параметры\n3. Загрузите изображения студенческого журнала\n4. Проверьте правильность данных\n5. Загрузите отчет\n\nЛицензия & Подробнее:" if lang.active else "FAQ\n1. Log in to the application\n2. Choose group and other parametres\n3. Load images of student journal\n4. Check input and output data\n5. Load data\n\nLicense & Details:"
+            text: "Инструкция:\n1. Авторизируйтесь в приложении\n2. Выберите группу и другие параметры\n3. Загрузите изображения студенческого журнала\n4. Проверьте правильность данных\n5. Загрузите отчет\n\nЛицензия & Подробнее:" if lang.active else "FAQ:\n1. Log in to the application\n2. Choose group and other parametres\n3. Load images of student journal\n4. Check input and output data\n5. Load data\n\nLicense & Details:"
             pos_hint: {"center_x": .5, "center_y": .775}
             valign: 'center'
             halign: 'center'
@@ -176,7 +176,7 @@ ScreenManager:
             size_hint_x: .95
             size_hint_y: None
             font_style: "Caption"
-            text: "\nПродолжая использование приложения Вы соглашаетесь с тем, что:\n1. Используете файлы приложения в учебных некоммерческих целях\n2. Автор не несет ответственность за данные, загружаемые другими пользователями, работоспособность отдельных компонентов или приложения в целом\n3. Права на приложение принадлежат автору" if lang.active else "By continue using the application, You agree that:\n1. You are using application files for educational non-commercial purposes\n 2. The author is not responsible for uploaded data by other users, the performance of individual components or the application as well\n3. All rights to the application belong to the author"
+            text: "\nПродолжая использование приложения Вы соглашаетесь с тем, что:\n1. Используете файлы приложения в учебных некоммерческих целях\n2. Автор не несет ответственность за данные, загружаемые другими пользователями, работоспособность отдельных компонентов или приложения в целом\n3. Права на приложение принадлежат автору" if lang.active else "By continue using the application, You agree that:\n1. You are using application files for educational non-commercial purposes\n 2. The author is not responsible for uploaded data by other users, the performance of individual components or the application as well\n3. Rights to the application belong to the author"
             pos_hint: {"center_x": .5, "center_y": .455} if lang.active else {"center_x": .5, "center_y": .47}
             valign: 'bottom'
             halign: 'center'
