--- a/main.kv
+++ b/main.kv
@@ -13,7 +13,7 @@ ScreenManager:
             size_hint_y: .75
             Image:
                 id: image1
-                source: "login.gif"
+                source: "login_another.gif" if theme.active else "login.gif"
                 anim_delay: 1/24
                 pos_hint: {"x": .15, "y": .5}
 
@@ -22,7 +22,7 @@ ScreenManager:
             MDLabel:
                 font_style: "Button"
                 text: "Авторизация" if lang.active else "Authentication"
-                pos_hint: {"center_x": .5, "center_y": .55}
+                pos_hint: {"center_x": .5, "center_y": .545}
                 valign: 'middle'
                 halign: 'center'
 
